[gd_scene load_steps=7 format=3 uid="uid://cbyffn1dk1f6y"]

[ext_resource type="Script" uid="uid://ftqdwqu4drid" path="res://Scripts/Weapons/Base/WeaponDemonJaws.gd" id="1_bslv3"]
[ext_resource type="Texture2D" uid="uid://ch1wegftc3l3f" path="res://Assets/TopJaw.png" id="2_82fub"]
[ext_resource type="Texture2D" uid="uid://cutgkstuee88l" path="res://Assets/Icon/DemonJawsIcon.png" id="2_xd85r"]
[ext_resource type="Texture2D" uid="uid://cve3njb0embwx" path="res://Assets/BottomJaw.png" id="3_eyudf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ri4rn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fnk3v"]

[node name="WeaponDemonJaws" type="Node2D"]
script = ExtResource("1_bslv3")
icon = ExtResource("2_xd85r")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_ri4rn")

[node name="JawsContainer" type="Area2D" parent="."]

[node name="TopJaw" type="Sprite2D" parent="JawsContainer"]
position = Vector2(17, -17)
texture = ExtResource("2_82fub")
offset = Vector2(16, 0)

[node name="BottomJaw" type="Sprite2D" parent="JawsContainer"]
position = Vector2(17, 17)
texture = ExtResource("3_eyudf")
offset = Vector2(16, 0)

[node name="AttackHitbox" type="Area2D" parent="JawsContainer"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JawsContainer/AttackHitbox"]
position = Vector2(-22, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fnk3v")
